# Ticketing-manager

./: .gitignore  CMakeLists.txt  README.md
include/auth/: AuthService.h  User.h
include/core/: BookingManager.hpp  Database.hpp  Ticket.hpp
include/nlohmann/: json.hpp
include/transport/: Transport.h  Trip.h  VehicleType.h
include/ui/: bookingdialog.h  logindialog.h  mainwindow.h  registerdialog.h  ticketdialog.h
js/data/: users.json
src/: main.cpp
src/auth/: AuthService.cpp  User.cpp
src/core/: BookingManager.cpp  Database.cpp
src/ui/: bookingdialog.cpp  logindialog.cpp  mainwindow.cpp  registerdialog.cpp  ticketdialog.cpp
